# multi-doc-chatbot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
multi-doc-chat/exception/: custom_exception.py
multi-doc-chat/logger/: custom_logger.py
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/schema/: schema.py
multi_doc_chat/src/: emni.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: document_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb
