[project]
name = "multi-doc-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.9",
    "ipykernel==6.30.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langsmith>=0.5.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "structlog>=25.5.0",
]
